# hx-requests-lsp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  workflow.yml
hx_requests_lsp/: python_parser.py  server.py
tests/: __init__.py  conftest.py  test_index.py  test_python_parser.py  test_template_parser.py
