[tool.poetry]
name = "hx-requests-lsp"
version = "0.1.1"
description = "Language Server Protocol implementation for hx-requests Django library"
authors = ["Jordan Penn"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jordannpenn/hx-requests-lsp"
homepage = "https://github.com/jordannpenn/hx-requests-lsp"
keywords = ["lsp", "language-server", "django", "htmx", "hx-requests"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
packages = [{include = "hx_requests_lsp"}]

[tool.poetry.dependencies]
python = "^3.11"
pygls = "^1.3.0"
lsprotocol = ">=2023.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[tool.poetry.scripts]
hx-requests-lsp = "hx_requests_lsp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 105
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version}"
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true
